@@ -2,3 +2,4 @@
 - eroticmv - fix playback
 - hpjav - fix listing
 - porndig - fix playback
+- hobbyporn - fix listing
